Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33259

Welcome Page: "Open Project" does not filter projects

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 18.0.0
    • Qt Creator 17.0.0
    • All Other Issues
    • None
    • Linux/X11
    • d28b669d1 (master)

      I always used "Open Project" instead "Open File or Project" because the former filtered out non-project files. 

      At least I think it did.

      In 17.0, I see all kind of files so its hard to find the project file within the sources.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            con Eike Ziller
            aha_1980 André Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes